--- a/frontend/src/app/perfil/perfil.css
+++ b/frontend/src/app/perfil/perfil.css
@@ -39,7 +39,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 240px;
+    width: 200px;
     height: 100vh;
 
     background-color: #F1F4F9;
@@ -109,6 +109,20 @@ body {
     left: 240px;
     padding-top: 15px;
     padding-left: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.tela-meio {
+    margin-left: 260px;
+    margin-top: 100px;
+    padding: 20px 30px;
+    position: absolute;
+    width: calc(50%);
+    left: 120px;
+
+    background-color: #ffffff;
+    height: 200px;
+    border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
 
@@ -243,4 +257,25 @@ body {
 
 .icone {
     font-size: 18px;
+}
+
+.deslogar-btn{
+    border: none;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 25px;
+    cursor: pointer;
+    margin-left: 25%;
+    margin-top: 43%;
+    width: 50%;
+    background-color: rgb(255, 47, 47);
+    border-radius: 15px;
+    height: 50px;
+    border: 1px solid black;
+    transition: 0.5s;
+}
+
+.deslogar-btn:hover {
+    background-color: red;
+    transform: translateY(-1px);
 }
