--- a/frontend/src/app/home/home.css
+++ b/frontend/src/app/home/home.css
@@ -111,6 +111,15 @@ body {
     padding-left: 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
+/* 
+.div-feed-principal{
+    border: 1px solid rgb(255, 0, 0);
+    position: absolute;
+    width: 60%;
+    left: 22%;
+    top: 10%;
+    height: 88vh;
+} */
 
 .menu-filtrar {
     float: right;
